--- a/src/main/resources/application-container.properties
+++ b/src/main/resources/application-container.properties
@@ -12,4 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration/postgresql
+#spring.flyway.locations=classpath:db/migration/postgresql
+#spring.flyway.check-location=true
+flyway.locations=classpath:db/migration/postgresql
